--- a/packages/core/src/textarea/textarea.element.scss
+++ b/packages/core/src/textarea/textarea.element.scss
@@ -6,7 +6,7 @@
 
 :host {
   --background: #{$cds-alias-object-container-background};
-  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-object-border-color};
+  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-object-interaction-border-color};
   --padding: #{$cds-global-space-5} #{$cds-global-space-6};
   --font-size: #{$cds-global-typography-font-size-3};
   --color: #{$cds-global-typography-color-500};
